[gd_scene load_steps=2 format=3 uid="uid://b13dighio76a7"]

[ext_resource type="Script" uid="uid://cwdsenmji25k1" path="res://material_maker/windows/load_from_website/load_from_website.gd" id="1"]

[node name="LoadFromWebsite" type="Window"]
title = "Load from website"
exclusive = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 500)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Filter" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Filter"]
layout_mode = 2
text = "Filter:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Filter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 0
fixed_column_width = 128
icon_mode = 0
icon_scale = 0.5

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="OK" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
disabled = true
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Cancel"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ImageHTTPRequest" type="HTTPRequest" parent="."]

[connection signal="close_requested" from="." to="." method="_on_Cancel_pressed"]
[connection signal="minimum_size_changed" from="VBoxContainer" to="." method="_on_VBoxContainer_minimum_size_changed"]
[connection signal="text_changed" from="VBoxContainer/Filter/LineEdit" to="." method="_on_Filter_changed"]
[connection signal="item_activated" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/Buttons/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
